# snake_snatch

./: Cargo.toml  README.md  dev.html  index.html  util.js
pkg/: LICENSE_MIT  README.md  package.json  snake_snatch.d.ts  snake_snatch.js  snake_snatch_bg.wasm  snake_snatch_bg.wasm.d.ts
src/: game.rs  images.rs  lib.rs  mouse.rs  network.rs  painter.rs  players.rs  snake.rs  sounds.rs  traits.rs  utils.rs  widgets.rs
